applications/dev/adminer/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    name: adminer
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
